Mon Sep 19 18:55:51 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* lib/fileutils.rb (module FileUtils): improve performance of
	  FileUtils.compare_stream. a patch by Masaki Matsushita.
	  [Feature #5337] [ruby-core:39622]

Mon Sep 19 18:42:58 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/-ext-/old_thread_select/test_old_thread_select.rb:
	  select() with timeout may return early in old Linux kernels
	  with 250 Hz tickrate and no dynticks, so skip everything older
	  than 2.6.32 (which has long term support).
	  And, Make the timing assertions consistently use assert_operator with
	  timing difference in error message
	  Patch by Eric Wong. [Bug #5335] [ruby-core:39618]

Mon Sep 19 09:28:06 2011  Eric Hodel  <drbrain@segment7.net>

	* test/openssl/test_ssl.rb (class OpenSSL):  Test
	  OpenSSL::SSL::SSLSocket#session and #session=.

Mon Sep 19 07:54:17 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* object.c (rb_obj_clone): singleton class should be attached
	  singleton object to.  a patch by Satoshi Shiba <shiba AT rvm.jp>
	  at [ruby-dev:44460].  [Bug #5274]

Sat Sep 17 23:34:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_data_type): inherit the core type in ripper so
	  that checks in core would work.  [ruby-core:39591] [Bug #5331]

Sat Sep 17 12:44:04 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/find.rb (Find.find): add documentation that Find.find
	  without block returns an enumerator.

Thu Sep 15 11:39:43 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (mark_entry, mark_key, mark_keyvalue): adjust callback
	  argument types.

Thu Sep 15 01:44:10 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/tk/*: Change encoding from EUC-JP to UTF-8

Wed Sep 14 11:43:37 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_fd_rcopy): added an argument guard.
	  Patch by NAKAMURA Usaku. [Bug #5306] [ruby-core:39435]

Tue Sep 13 20:21:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
